src/main/java/com/example/bookstoreproject/error/CommonErrors.java
package com.example.bookstoreproject.error;

import lombok.experimental.UtilityClass;

import java.util.function.Supplier;

@UtilityClass
public class CommonErrors {
    public static Supplier<BadRequestException> supplyValidationError(final String message) {
        return () -> new BadRequestException(message);
    }
}
